--- a/client/styles/receive.scss
+++ b/client/styles/receive.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100vh;
   padding-top: 15px;
+  text-align: center;
 
   .text-center {
     margin-top: 30px;
